2011-03-14  Guillaume Lazzara  <z@lrde.epita.fr>

	Regen generated files.

	* headers.mk,
	* tests/unit_test/unit-tests.mk: Regen.

2011-03-14  Guillaume Lazzara  <z@lrde.epita.fr>

	* tests/toolchain/nepomuk/Makefile.am: Add MAGICKXX flags.

2011-03-14  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/core/def/lbl_type.hh: Use int_u<n> as label type.

2011-03-14  Guillaume Lazzara  <z@lrde.epita.fr>

	Set unit tests dependencies.

	* tests/unit_test/Makefile.am: Add new conditional test file.

	* tests/unit_test/cond_tests_magickxx_qt_tesseract_tiff,
	* tests/unit_test/cond_tests_qt,
	* tests/unit_test/cond_tests_qt_tesseract_tiff: Update list of files.

	* tests/unit_test/unit-tests.mk: Regen.

2011-03-14  Guillaume Lazzara  <z@lrde.epita.fr>

	New debug tools.

	* src/Makefile.am,
	* src/debug/Makefile.am: Update targets.

	* src/debug/non_text_mask.cc,
	* src/debug/show_components_bboxes.cc,
	* src/debug/show_groups_bboxes.cc,
	* src/debug/show_links_bottom_aligned_2angles.cc,
	* src/debug/show_links_top_aligned_2angles.cc,
	* src/debug/show_paragraph_blocks.cc,
	* src/non_text_components.cc: New.

	* src/debug/show_links_several_right.cc: Removed. Deprecated.

2011-03-14  Guillaume Lazzara  <z@lrde.epita.fr>

	New non-text components extraction routine.

	* scribo/make/text_blocks_image.hh,
	* scribo/make/text_components_image.hh,
	* scribo/primitive/extract/internal/union.hh: New.

	* scribo/primitive/extract/non_text.hh: New implementation.

	* scribo/primitive/extract/non_text_kmean.hh: New. Old
	implementatino is saved here.

2011-03-14  Guillaume Lazzara  <z@lrde.epita.fr>

	Introduce result image output.

	* scribo/fun/v2v/highlight.hh,
	* scribo/io/img/internal/debug_img_visitor.hh,
	* scribo/io/img/internal/draw_edges.hh,
	* scribo/io/img/internal/full_img_visitor.hh,
	* scribo/io/img/internal/non_text_img_visitor.hh,
	* scribo/io/img/internal/text_img_visitor.hh,
	* scribo/io/img/save.hh: New.

2011-03-14  Guillaume Lazzara  <z@lrde.epita.fr>
