@@ -1,4 +1,5 @@
-// Copyright (C) 2009 EPITA Research and Development Laboratory (LRDE)
+// Copyright (C) 2009, 2011 EPITA Research and Development Laboratory
+// (LRDE)
 //
 // This file is part of Olena.
 //
@@ -81,7 +82,8 @@ namespace scribo
 
 
 	  bool verify_link_criterion_(unsigned current_object,
-				      const P& start_point, const P& p) const;
+				      const P& start_point, const P& p,
+				      anchor::Type anchor) const;
 
 	  void start_processing_object_(unsigned current_object);
 
@@ -116,9 +118,11 @@ namespace scribo
 	link_single_dmax_base<L, E>::verify_link_criterion_(
 	  unsigned current_object,
 	  const P& start_point,
-	  const P& p) const
+	  const P& p,
+	  anchor::Type anchor) const
 	{
 	  (void) current_object;
+	  (void) anchor;
 
 	  float dist = math::abs(p[direction_] - start_point[direction_]);
 	  return dist <= dmax_; // Not too far
